Fix aligncenter image spacing issues SMCO01-296

--- a/wp-content/themes/hot97/assets/styles/theme/twentytwentyone/assets/sass/05-blocks/image/_style.scss
+++ b/wp-content/themes/hot97/assets/styles/theme/twentytwentyone/assets/sass/05-blocks/image/_style.scss
@@ -27,18 +27,6 @@
 	}
 }
 
-// Remove vertical margins from image block wrappers when floated
-.entry-content > *[class="wp-block-image"],
-.entry-content [class*="inner-container"] > *[class="wp-block-image"] {
-	margin-top: 0;
-	margin-bottom: 0;
-
-	// Remove top margins from the following element when previous image block is floated
-	+ * {
-		margin-top: 0;
-	}
-}
-
 // Block Styles
 .wp-block-image.is-style-twentytwentyone-border img,
 .wp-block-image.is-style-twentytwentyone-image-frame img {
